--- a/web-painter-ts/tsconfig.json
+++ b/web-painter-ts/tsconfig.json
@@ -15,5 +15,5 @@
     "noImplicitReturns": true,
     "skipLibCheck": true
   },
-  "include": ["src"]
+  "include": ["src", "src/color-picker/color.min.js"]
 }
